Pugmas: all kinds of work